# mask_audio_fingerprint

./: .gitmodules  README.md  assigned_lab.ipynb  fingerprint.py  identify.ipynb  insert.ipynb  insert.py  stats.py
android/Mask/app/: build.gradle
android/Mask/app/src/androidTest/java/com/example/mask/: ExampleInstrumentedTest.java
android/Mask/app/src/main/: AndroidManifest.xml
android/Mask/app/src/main/cpp/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  native-lib.cpp
android/Mask/app/src/main/java/com/example/mask/: MainActivity.java
android/Mask/app/src/main/res/layout/: activity_main.xml
android/Mask/app/src/test/java/com/example/mask/: ExampleUnitTest.java
android/Mask/gradle/wrapper/: gradle-wrapper.properties
android/ece420_lab4/lab4/: .gitignore  README.md  build.gradle
android/ece420_lab4/lab4/.google/: packaging.yaml
android/ece420_lab4/lab4/app/: build.gradle  proguard-rules.pro
android/ece420_lab4/lab4/app/src/main/: AndroidManifest.xml
android/ece420_lab4/lab4/app/src/main/cpp/: CMakeLists.txt  audio_recorder.cpp  ece420_lib.cpp  ece420_lib.h  ece420_main.cpp  ece420_main.h  fingerprint.hpp  identify.h
android/ece420_lab4/lab4/app/src/main/cpp/kfr/: compile_commands.json
android/ece420_lab4/lab4/app/src/main/java/com/ece420/lab4/: MainActivity.java
android/ece420_lab4/lab4/app/src/main/res/drawable/: gradient.xml  progress_bar.xml  start_button.xml  stop_button.xml
android/ece420_lab4/lab4/app/src/main/res/layout/: activity_main.xml
android/ece420_lab4/lab4/app/src/main/res/values-v21/: styles.xml
android/ece420_lab4/lab4/gradle/wrapper/: gradle-wrapper.properties
cpp/: CMakeLists.txt  audio_helper.cpp  audio_helper.hpp  database.cpp  database.hpp  fingerprint.cpp  fingerprint.hpp  identify.cpp  identify.hpp  ingest.cpp  ingest.hpp  main.cpp  types.hpp
python/: fingerprint.py  identify.py
